--- a/trainingapp/src/main/resources/templates/user.html
+++ b/trainingapp/src/main/resources/templates/user.html
@@ -55,7 +55,6 @@
         <p class="lead">
           Pratite svoje treninge i napredak na jednostavan način
         </p>
-        <a href="#" class="btn btn-primary btn-lg">Registruj se</a>
       </div>
     </div>
 
@@ -95,12 +94,14 @@
       </div>
     </div>
 
+    <a th:href="@{workout-calendar}">Workout Calendar</a>
+
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
       <p>&copy; 2024 Praćenje Treninga. Sva prava zadržana.</p>
     </footer>
 
     <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/4.5.2/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/5.3.2/js/bootstrap.min.js}"></script>
   </body>
 </html>
