--- a/trainingapp/src/main/resources/templates/home.html
+++ b/trainingapp/src/main/resources/templates/home.html
@@ -10,8 +10,8 @@
     />
   </head>
   <body>
-    <a href="login.html">Login</a>
-    <a href="#">Register</a>
+    <a th:href="@{/login}">Login</a>
+    <a th:href="@{/register}">Register</a>
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
